# sipsync

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  redis_client.py
backend/app/engine/: base.py  deck.py  fsm.py  game_loader.py
backend/app/games/: red_light_green_light.py
backend/app/models/: room.py
backend/app/routers/: rooms.py  ws.py
backend/tests/: test_deck.py  test_game_loader.py  test_red_light_green_light.py  test_ws_game.py
frontend/: app.json  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.tsx  index.tsx  onboarding.tsx
frontend/app/room/[code]/: _layout.tsx  game.tsx  lobby.tsx  podium.tsx  summary.tsx  tutorial.tsx
frontend/components/: ActiveGameScreen.tsx
frontend/components/games/: ReflexGameUI.tsx
frontend/constants/: api.ts  design.ts
frontend/hooks/: usePlayerIdentity.ts  useRoomSocket.ts
