[project]
name = "sipsync-backend"
version = "0.1.0"
description = "SipSync real-time party game — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "redis>=8.0.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
